--- a/DQM_dev.ipynb
+++ b/DQM_dev.ipynb
@@ -43,14 +43,14 @@
    },
    "outputs": [],
    "source": [
-    "input_file = '../data/RawDataSaver0CMSVMETiming_Run81_0_Raw.root'\n",
+    "input_file = '../data/test_Run146.root'\n",
     "config_file = 'config/VME_test.txt'\n",
     "save_loc = '/Users/olmo/Desktop'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -65,20 +65,19 @@
     "        self.labels = []\n",
     "\n",
     "        for i, l in enumerate(self.raw_conf):\n",
-    "            l = l[0:-1].split('  ')\n",
+    "            if l[0] == '#':\n",
+    "                continue\n",
+    "            l = l[0:-1].split(' ')\n",
     "            if '-->Pri' in l[0]:\n",
-    "                print l\n",
     "                self.plots = l[1:]\n",
     "            elif len(self.labels) == 0:\n",
     "                self.labels = l[1:]\n",
     "            else:\n",
-    "                print l\n",
     "                n = int(l[0])\n",
     "                self.ch_ordered.append(n)\n",
     "                l = l[1:]\n",
     "                self.channel[n] = {}\n",
     "                for k, val in zip(self.labels, l):\n",
-    "                    print k, val\n",
     "                    if 'idx' in k:\n",
     "                        self.channel[n][k] = int(val)\n",
     "                    else:\n",
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -96,23 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['-->Print:', 'TimeResolution']\n",
-      "['9', '1', '-1', '-1', 'gaus_mean']\n",
-      "idx_time 1\n",
-      "idx_dut -1\n",
-      "idx_ref -1\n",
-      "var_ref gaus_mean\n",
-      "['14', '1', '0', '9', 'LP2_10']\n",
-      "idx_time 1\n",
-      "idx_dut 0\n",
-      "idx_ref 9\n",
-      "var_ref LP2_10\n",
-      "['15', '1', '0', '9', 'LP2_10']\n",
-      "idx_time 1\n",
-      "idx_dut 0\n",
-      "idx_ref 9\n",
-      "var_ref LP2_10\n",
-      "['TimeResolution']\n",
+      "['Amp', 'Int', 'WaveColor', 'PosRaw', 'PosWeight', 'TimeResRaw']\n",
       "{'idx_dut': -1, 'idx_ref': -1, 'idx_time': 1, 'var_ref': 'gaus_mean'}\n"
      ]
     }
@@ -125,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -148,9 +131,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ERROR]: Input file not found: cane\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error in <TFile::TFile>: file cane does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = ['../data/test_Run146.root', '../data/test_Run370.root', 'cane', '../data/test_Run509.root']\n",
+    "\n",
+    "chain = rt.TChain('pulse')\n",
+    "chain.tree_name = tree_name = 'pulse'\n",
+    "for i, f in enumerate(inputs):\n",
+    "    root_file = rt.TFile.Open( f,\"READ\");\n",
+    "    if not root_file:\n",
+    "        print \"[ERROR]: Input file not found:\", f\n",
+    "        continue\n",
+    "    tree_name = root_file.GetListOfKeys().At(0).GetName()\n",
+    "    if i == 0:\n",
+    "        if tree_name != 'pulse':\n",
+    "            print 'Change'\n",
+    "            chain = rt.TChain(tree_name)\n",
+    "            chain.tree_name = tree_name\n",
+    "    elif tree_name != chain.tree_name:\n",
+    "        print 'Skipping', f, ' for tree name incompatibility'\n",
+    "        continue\n",
+    "    chain.Add(f)\n",
+    "\n",
+    "# df = rt.ROOT.Experimental.TDataFrame(chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -160,155 +189,63 @@
     "canvas['wave'] = {}\n",
     "canvas['pos'] = {}\n",
     "canvas['w_pos'] = {}\n",
+    "canvas['t_res_raw'] = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning in <TCanvas::Constructor>: Deleting canvas with same name: c_amp_9\n",
+      "Info in <TCanvas::Print>: png file /Users/olmo/Desktop/Run146plots/Amp_ch9.png has been created\n",
+      "Warning in <TCanvas::Constructor>: Deleting canvas with same name: c_amp_14\n",
+      "Info in <TCanvas::Print>: png file /Users/olmo/Desktop/Run146plots/Amp_ch14.png has been created\n",
+      "Warning in <TCanvas::Constructor>: Deleting canvas with same name: c_amp_15\n",
+      "Info in <TCanvas::Print>: png file /Users/olmo/Desktop/Run146plots/Amp_ch15.png has been created\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in configurations.ch_ordered:\n",
+    "    conf = configurations.channel[k]\n",
     "\n",
-    "branches = ['amp', 'channel', 'integral', 'time', 'x_dut', 'y_dut']\n",
-    "# branches.append('amp')\n",
     "\n",
-    "data = root2array(input_file, branches=branches)\n",
-    "\n",
-    "for k, conf in configurations.channel.items():\n",
-    "    \n",
     "    '''=========================== Amplitude ==========================='''\n",
-    "    canvas['amp'][k] = rt.TCanvas('c_amp_'+str(k), 'c_amp_'+str(k), 800, 600)\n",
-    "    \n",
     "    name = 'h_amp_'+str(k)\n",
     "    title = 'Amplitude channel '+str(k)\n",
-    "    amp = (data['amp'].T)[k]\n",
-    "    h = create_TH1D(amp, name, title, \n",
-    "                    binning = [100, 0, 550],\n",
-    "                    axis_title = ['Peak amplitude [mV]', 'Events / 5.5 mV'])\n",
-    "            \n",
+    "    # amp = (data['amp'].T)[k]\n",
+    "    # h = create_TH1D([0], name, title,\n",
+    "    #                 binning = [100, 0, 550],\n",
+    "    #                 axis_title = ['Peak amplitude [mV]', 'Events / 5.5 mV'])\n",
+    "\n",
+    "    # h = df.Histo1D('amp['+ str(k) +']')\n",
+    "    h = rt.TH1D(name, title, 100, 0, 550)\n",
+    "    chain.Project(name, 'amp['+str(k)+']')\n",
+    "    \n",
     "    h.GetXaxis().SetRange(int(40/5.5)+1,int(450/5.5)+1)\n",
     "    i_max = h.GetMaximumBin()\n",
     "    h.GetXaxis().SetRange(1,100)\n",
     "    peak = h.GetBinCenter(i_max)\n",
     "    conf['amp_range'] = [max(20,peak*0.6), min(450, peak*1.6)]\n",
     "    res = h.Fit('landau','LQSR', '', conf['amp_range'][0], conf['amp_range'][1])\n",
-    "    #     h.SetOptStat\n",
-    "    \n",
-    "    if(h.GetMaximum() - h.GetMinimum() > 100):\n",
-    "        canvas['amp'][k].SetLogy()\n",
-    "    h.DrawCopy('E1')\n",
-    "    canvas['amp'][k].SaveAs(out_dir + '/Amp_ch'+str(k)+'.png')\n",
-    "    \n",
-    "    '''=========================== Integral ==========================='''\n",
-    "    canvas['int'][k] = rt.TCanvas('c_int_'+str(k), 'c_int_'+str(k), 800, 600)\n",
-    "    \n",
-    "    name = 'h_int_'+str(k)\n",
-    "    title = 'Integral channel '+str(k)\n",
-    "    integral = -(data['integral'].T)[k]\n",
-    "    h = create_TH1D(integral, name, title, \n",
-    "                    binning = [100, np.min(integral), np.max(integral)],\n",
-    "                    axis_title = ['Integral [pC]', 'Events'])\n",
-    "    \n",
-    "    if(h.GetMaximum() - h.GetMinimum() > 100):\n",
-    "        canvas['int'][k].SetLogy()\n",
-    "    h.DrawCopy('E1')\n",
-    "    canvas['int'][k].SaveAs(out_dir + '/Int_ch'+str(k)+'.png')\n",
-    "    \n",
-    "    '''=========================== Waveform color chart ==========================='''\n",
-    "    canvas['wave'][k] = rt.TCanvas('c_wave_'+str(k), 'c_wave_'+str(k), 800, 600)\n",
-    "    \n",
-    "    name = 'h_wave_'+str(k)\n",
-    "    title = 'Waveform color chart channel '+str(k)\n",
-    "    \n",
-    "    ch = data['channel'][:,k].flatten()\n",
-    "    t = data['time'][:,conf['idx_time']].flatten()\n",
-    "    \n",
-    "    h = create_TH2D(np.column_stack((t,ch)), name, title,\n",
-    "                    binning = [250, 0, np.max(t), 250, np.min(ch), np.max(ch)],\n",
-    "                    axis_title = ['Time [ns]', 'Voltage [mV]']\n",
-    "                   )\n",
-    "    h.SetStats(0)\n",
-    "    \n",
-    "    if(h.GetMaximum() - h.GetMinimum() > 100):\n",
-    "        canvas['wave'][k].SetLogz()\n",
-    "    h.DrawCopy('colz')\n",
-    "    canvas['wave'][k].SaveAs(out_dir + '/Waveform_ch'+str(k)+'.png')\n",
     "\n",
-    "    '''=========================== Raw time resolution ==========================='''\n",
-    "    if conf['idx_dut'] >= 0:\n",
-    "        name = 'h_pos_'+str(k)\n",
-    "        title = 'Track position at z_DUT[' + str(conf['idx_dut']) + '], for channel amp['+str(k)+'] in {' \n",
-    "        title += str(conf['amp_range'][0]) + ', ' + str(conf['amp_range'][1]) + '} mV'\n",
-    "        \n",
-    "        sel = np.logical_and(np.greater(amp,conf['amp_range'][0]), np.less(amp, conf['amp_range'][1]))\n",
+    "    if 'Amp' in configurations.plots:\n",
+    "        canvas['amp'][k] = rt.TCanvas('c_amp_'+str(k), 'c_amp_'+str(k), 800, 600)\n",
+    "        if(h.GetMaximum() - h.GetMinimum() > 5000):\n",
+    "            canvas['amp'][k].SetLogy()\n",
+    "        h.DrawCopy('E1')\n",
+    "        canvas['amp'][k].Update()\n",
+    "        canvas['amp'][k].SaveAs(out_dir + '/Amp_ch'+str(k)+'.png')\n",
     "\n",
-    "        x = (data['x_dut'].T)[conf['idx_dut']]\n",
-    "        y = (data['y_dut'].T)[conf['idx_dut']]\n",
-    "        \n",
-    "        sel = np.logical_and(sel, np.greater(x, -998))\n",
-    "        sel = np.logical_and(sel, np.greater(y, -998))\n",
-    "\n",
-    "        x = x[sel]\n",
-    "        y = y[sel]\n",
-    "\n",
-    "        h = create_TH2D(np.column_stack((x,y)), name, title,\n",
-    "                        binning = [250, np.min(x), np.max(x)+0.3*np.std(x), 250, np.min(y), np.max(y)+0.3*np.std(x)],\n",
-    "                        axis_title = ['x [mm]', 'y [mm]']\n",
-    "                       )\n",
-    "        \n",
-    "        canvas['pos'][k] = rt.TCanvas('c_pos_'+str(k), 'c_pos_'+str(k), 800, 600)\n",
-    "        h.DrawCopy('colz')\n",
-    "        canvas['pos'][k].SaveAs(out_dir + '/PositionXY_raw_ch'+str(k)+'.png')\n",
-    "        \n",
-    "        name = 'h_weight_pos_'+str(k)\n",
-    "        title = 'Track position at z_DUT[' + str(conf['idx_dut']) + '] weighted with channel amp['+str(k)+'] in {' \n",
-    "        title += str(conf['amp_range'][0]) + ', ' + str(conf['amp_range'][1]) + '} mV'\n",
-    "        h = create_TH2D(np.column_stack((x,y)), name, title, weights=amp[sel],\n",
-    "                        binning = [250, np.min(x), np.max(x)+0.3*np.std(x), 250, np.min(y), np.max(y)+0.3*np.std(x)],\n",
-    "                        axis_title = ['x [mm]', 'y [mm]']\n",
-    "                       )\n",
-    "\n",
-    "        canvas['w_pos'][k] = rt.TCanvas('c_w_pos_'+str(k), 'c_w_pos_'+str(k), 800, 600)\n",
-    "        h.DrawCopy('colz')\n",
-    "        canvas['w_pos'][k].SaveAs(out_dir + '/PositionXY_amp_weight_ch'+str(k)+'.png')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "int(5.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data['channel'][:,9].flatten()\n",
-    "data['channel'][:,9].flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data['x_dut'].T."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "'a' == 'a'"
+    "    # Compute the selection and save it to the\n",
+    "#     conf['amp_sel'] = np.logical_and(np.greater(amp,conf['amp_range'][0]), np.less(amp, conf['amp_range'][1]))"
    ]
   },
   {
